[gd_scene load_steps=19 format=2]

[ext_resource path="res://Animals/rabbit.png" type="Texture" id=1]
[ext_resource path="res://Animals/Rabbit.gd" type="Script" id=2]
[ext_resource path="res://Shadows/10p shadow.png" type="Texture" id=3]
[ext_resource path="res://Overlap Detection/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/SoftCollision.gd" type="Script" id=6]
[ext_resource path="res://Environment Effects/Blink.gdshader" type="Shader" id=7]
[ext_resource path="res://Sounds/death_sound.tres" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 11, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 11, 7 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 33, 0, 11, 7 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 2.00001
height = 3.99998

[sub_resource type="CircleShape2D" id=7]
radius = 3.0

[sub_resource type="CircleShape2D" id=9]
radius = 3.0

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "play"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Rabbit" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="10pShadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
position = Vector2( 0, -3 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
rotation = 1.57079
shape = SubResource( 18 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -2 )
shape = SubResource( 7 )

[node name="StateTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionTimer" type="Timer" parent="."]
one_shot = true

[node name="SoftCollision" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 260
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2( 0, -2 )
shape = SubResource( 9 )

[node name="Blink" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/play = SubResource( 13 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
